# anthropic_project

./: # NarrativeIsomorph: Computational Analy.md  .factorypath  .gitignore  .pre-commit-config.yaml  2<structured_analysis>.xml  Build Failure Debug Plan:.yaml.yml  CLAUDE.md  CLI.md  Dockerfile  FRACTAL_RENAMING_SUMMARY.md  Makefile  NAMING_CONVENTIONS.md  NarrativeSpecificEncoder.py  README.md  SECURITY.md  anthropic_client.py  build-verify.sh  build-with-magic.sh  build.gradle  cli.py  current-errors.md  custom_openai_integration.md  devcontainer.json  docker-compose.yml  gradle.properties  mcp.config.json  next-steps.md  package-lock.json  package.json  pixi.toml  pyproject.toml  requirements.txt  settings.gradle  setup.py  test_o1_kob_o3.py  total-recall.code-workspace
.benchmarks/Darwin-CPython-3.9-64bit/: 0001_66eb57ac1451928d28fb9f308b5c4fea0d8b2771_20250311_134819_uncommited-changes.json  0002_66eb57ac1451928d28fb9f308b5c4fea0d8b2771_20250311_134855_uncommited-changes.json  0003_66eb57ac1451928d28fb9f308b5c4fea0d8b2771_20250311_134922_uncommited-changes.json  0004_66eb57ac1451928d28fb9f308b5c4fea0d8b2771_20250311_134935_uncommited-changes.json  0005_66eb57ac1451928d28fb9f308b5c4fea0d8b2771_20250311_135248_uncommited-changes.json
.cursor/: mcp.json
.devcontainer/: Dockerfile  docker-compose.yml
.linting/: rules.yaml
anthropic_client/: *Run Tests:** Execute both the Python CL.md  AgentRunnerExample.py  __init__.py  cli.py  client.py  debug_client.py  frame-full.md  get_example_prompt.py  gpt-4.5-preview.json  kob-fourfive.py  load_example_conversation.py  model_config.py  multi_provider_client.py  to_add_to_mojo.md
anthropic_client.egg-info/: PKG-INFO  SOURCES.txt
anthropic_client_mojo/: CLI.md  Makefile  README.md  Recursive Intention Modeling for Spravato Therapeutic.md  __init__.py  claude-think-custom-.code-workspace  claude-think-custom.code-workspace  claudethink_install  claudethinkmojo  claudethinkstream  cli.mojo  client.mojo  full-stuctured-prompt.yaml  main.mojo  pixi.toml  python_cli.py  summary.md  tests.mojo
anthropic_client_mojo.egg-info/: PKG-INFO  SOURCES.txt
app/: build.gradle  docker-compose.yml
benchmark/: README.md
cct/: full.json
docs/: Documentation_Audit_Checklist.md  Documentation_Update_Plan.md  README.md  action-plan.md  how-to-use.py  integration_test_suite.md
python-client/: build.gradle
scripts/: exemption_analyzer.py  rule_standardizer.py  tech_debt_tracker.py  type_system_refiner.py
tests/: __init__.py  conftest.py  test_anthropic_client.py  test_cli.py  test_integration.py
(+183 files in other folders)
