[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anthropic-client"
version = "0.1.0"
description = "A Python client for interacting with Anthropic's Claude models"
readme = "README.md"
authors = [
    { name = "Ryan Oates" }
]
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.18.1",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
packages = ["anthropic_client"]

[project.scripts]
claudethink = "anthropic_client.cli:main" 