[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anthropic-client"
version = "0.1.0"
description = "A Python client for interacting with Anthropic's Claude models"
readme = "README.md"
authors = [
    { name = "Ryan Oates" }
]
requires-python = ">=3.8"
dependencies = [ "anthropic>=0.49.0,<0.50", "python-dotenv>=1.0.1,<2",
]

[tool.setuptools]
packages = ["anthropic_client"]

[project.scripts]
claudethink = "anthropic_client.cli:main"

[tool.pytest.ini_options]
addopts = "--benchmark-only --benchmark-autosave"
testpaths = ["tests", "benchmark"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 
[tool.pixi.project]
channels = ["https://conda.modular.com/max-nightly", "https://conda.modular.com/max", "https://repo.prefix.dev/modular-community", "conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
anthropic-client = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
max = ">=25.2.0.dev2025031605,<26"
openai = ">=1.66.3,<2"
gradle = ">=8.11.1,<9"
openjdk = ">=22.0.1,<23"
